@@ -1,111 +1,6 @@
 #include "eloader.h"
 #include "debug.h"
-
-// Estimate a syscall
-// Pass reference NID and distance from desidered function in the export table
-// Return syscall number
-// m0skit0's first implementation, no estimation
-/*
-u32 estimate_syscall_old(u32 ref_nid, int off) {
-	u32 ref_call;
-	
-	get_call_nidtable(ref_nid, &ref_call);
-	
-	return MAKE_SYSCALL(GET_SYSCALL_NUMBER(ref_call) + off);
-}
-*/
-
-// Estimate a syscall
-// Pass reference NID and distance from desired function in the export table
-// Return syscall instruction
-// ab5000's implementation, estimation works :)
-/*
-u32 estimate_syscall(const char *lib, u32 nid)
-{
-	SceUID fd;
-	int nidnum, ret, i, sysl_i, sysm_i;
-	char buf[64];
-	u16 sysl, sysm, sysc;
-	u32 curnid, curcall;
-
-	// Open library file
-	strcpy(buf, LIB_PATH);
-	strcat(buf, lib);
-	strcat(buf, LIB_EXTENSION);
-
-	if((fd = sceIoOpen(buf, PSP_O_RDONLY, 0777)) < 0)	
-		return 0;
-
-	// Get NID count
-	nidnum = sceIoLseek(fd, 0, PSP_SEEK_END) / sizeof(u32);
-	if(nidnum < 0)
-	{		
-		sceIoClose(fd);		
-		return 0;
-	}
-	
-	ret = sceIoLseek(fd, 0, PSP_SEEK_SET);
-	if(ret < 0)
-	{		
-		sceIoClose(fd);		
-		return 0;
-	}
-	
-	sysl = 0xFFFF;
-	sysl_i = 0;
-	sysm = 0;
-	sysm_i = -1;
-	
-	// Find lowest syscall and desired nid position
-	for(i=0;i<nidnum;i++)
-	{
-		ret = sceIoRead(fd, &curnid, sizeof(curnid));
-		if(ret < 0)
-		{
-			sceIoClose(fd);		
-			return 0;
-		}
-		
-		// Check if we have found desidered NID
-		if(curnid == nid)
-			sysm_i = i;
-		
-		// Get syscall from MoHH stubs
-		get_call_nidtable(curnid, &curcall);
-		
-		// Get syscall value
-		sysc = GET_SYSCALL_NUMBER(curcall);
-		
-		// Check lowest syscall
-		if(sysc && sysc < sysl)
-		{
-			sysl = sysc;
-			sysl_i = i;
-		}
-	}
-	
-	// File I/O done, close the file
-	sceIoClose(fd);
-	
-	// Lowest syscall if 0xFFFF only if the library isn't in MoHH stubs
-	// sysm_i is -1 only if the NID isn't found in library
-	if(sysl == 0xFFFF || sysm_i == -1)		
-		return 0;
-	
-	// Find unknown syscall
-	sysm = sysl + ((sysm_i < sysl_i) ? (nidnum - sysl_i + sysm_i) : (sysm_i - sysl_i));
-
-#ifdef DEBUG
-	write_debug(" ESTIMATION ", NULL, 0);
-	write_debug(" LIBRARY ", lib, strlen(lib));
-	write_debug(" NID ", &nid, sizeof(nid));
-	write_debug(" OLD ESTIMATION ", &sysm, sizeof(sysm));
-	estimate_syscall_new (lib, nid);
-#endif
-	
-	return MAKE_SYSCALL(sysm);
-}
-*/
+#include "utils.h"
 
 // Searches for NID in a NIDS file and returns the index
 int find_nid_in_file(SceUID nid_file, u32 nid)
@@ -151,8 +46,22 @@ u32 estimate_syscall(const char *lib, u32 nid)
 		
 	// Constructing the file path
 	strcpy(file_path, LIB_PATH);
+    u32 firmware_v = getFirmwareVersion();
+    if (firmware_v >= 500 && firmware_v < 600)
+        strcat(file_path, "_5xx");
+    else if (firmware_v >= 600)
+        strcat(file_path, "_6xx");
+
 	strcat(file_path, lib);
 	strcat(file_path, LIB_EXTENSION);
+    
+    // rollback to default name in case of error
+    if (!file_exists(file_path))
+    {
+        strcpy(file_path, LIB_PATH);
+        strcat(file_path, lib);
+        strcat(file_path, LIB_EXTENSION);
+    }    
 
 	if ((nid_file = sceIoOpen(file_path, PSP_O_RDONLY, 0777)) < 0)
 		exit_with_log(" ERROR: CANNOT OPEN .NIDS FILE ", file_path, strlen(file_path));
